--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
-    "eslint": "^8.55.0",
+    "eslint": "^8.57.1",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -39,7 +39,11 @@
     "vitest": "^1.1.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/jest-dom": "^6.1.6",
-    "jsdom": "^23.0.1"
+    "jsdom": "^24.0.0"
+  },
+  "overrides": {
+    "rimraf": "^5.0.5",
+    "glob": "^10.3.10"
   }
 }
 
