--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,21 +3,20 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Install dependencies
+# Install dependencies with cache mount for faster rebuilds
 COPY package*.json ./
-RUN npm ci
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci --prefer-offline --no-audit
 
-# Copy source and build
+# Copy source and build (separated from npm install for better caching)
 COPY . .
 RUN npm run build
 
 # Production image with nginx
 FROM nginx:alpine
 
-# Copy built assets
+# Copy built assets and nginx config in one layer
 COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
