--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,12 +1,16 @@
 # Production Dockerfile
 FROM node:18-alpine AS builder
 
+LABEL maintainer="vavip"
+LABEL description="Vavip Frontend Builder Stage"
+LABEL version="1.0"
+
 WORKDIR /app
 
 # Install dependencies
 # Layer is cached unless package*.json changes
 COPY package*.json ./
-RUN npm ci --prefer-offline --no-audit
+RUN npm ci --prefer-offline --no-audit --progress=false
 
 # Copy source and build (separated from npm install for better caching)
 COPY . .
@@ -15,12 +19,35 @@ RUN npm run build
 # Production image with nginx
 FROM nginx:alpine
 
-# Copy built assets and nginx config in one layer
+LABEL maintainer="vavip"
+LABEL description="Vavip Frontend Production Image"
+LABEL version="1.0"
+
+# Remove default nginx website
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built assets and nginx config
 COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Create nginx cache directory
+RUN mkdir -p /var/cache/nginx/client_temp && \
+    mkdir -p /var/cache/nginx/proxy_temp && \
+    mkdir -p /var/cache/nginx/fastcgi_temp && \
+    mkdir -p /var/cache/nginx/uwsgi_temp && \
+    mkdir -p /var/cache/nginx/scgi_temp && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /usr/share/nginx/html && \
+    chmod -R 755 /usr/share/nginx/html
+
+# Expose port
 EXPOSE 80
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
+
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
 
 
